--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-sdk
+        tools:overrideLibrary="com.google.firebase.auth" />
+
     <application
         android:label="ecommerce"
         android:name="${applicationName}"
